fixed nonvisible redirect links v0.2

--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@
     flex-direction: column;
     align-items: center;
     max-width: 70vw;
-    min-height: 50vh;
+    max-height: 50vh;
     background-color: rgba(179, 173, 169, 1);
     border: 5px solid black;
     text-align: center;
